# email-watch

./: main.py  pyproject.toml
src/email_watch/: first_pass.py
