[project]
name = "email-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dworshak-prompt[typer]>=0.2.33",
    "o365",
    "slack-sdk>=3.41.0",
]

[tool.uv.extra-build-dependencies]
cryptography = []

[tool.uv.sources] # for hardcoding local wheels, to test without leveraging PyPI.
email-watch = { workspace = true }
#pyhabitat = { path = "../pyhabitat/dist/pyhabitat-0.2.4-py3-none-any.whl" }
#dworshak-prompt = { path = "../dworshak-prompt/dist/dworshak_prompt-0.2.34-py3-none-any.whl" }
